# vrm-viewer

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  index.html
.github/workflows/: ci.yml  deploy.yml
pages/: index.html  index.js  style.css
pages/wasm/: vrm_viewer.d.ts  vrm_viewer.js  vrm_viewer_bg.js  vrm_viewer_bg.wasm.d.ts
public/: init.js
src/: blob.rs  js.rs  lib.rs  main.rs  plugin.rs
