[package]
name = "vrm-viewer"
publish = false
version = "0.0.0"
edition = "2021"
repository = "https://github.com/kayhhh/vrm-viewer"
license = "GPL-3.0-or-later"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
bevy = "0.12.1"
bevy_vrm = "0.0.7"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.90"
bevy_blob_loader = "0.0.3"
bevy_web_file_drop = "0.0.2"
