[package]
name = "vrm-viewer"
publish = false
version = "0.0.0"
edition = "2021"
repository = "https://github.com/kayhhh/vrm-viewer"
license = "GPL-3.0-or-later"

[dependencies]
bevy = "0.13.0"
bevy_vrm = "0.0.8"

[target.'cfg(target_family = "wasm")'.dependencies]
bevy_blob_loader = "0.0.4"
bevy_web_file_drop = "0.0.2"
wasm-bindgen = "=0.2.92"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
