[package]
name = "vrm-viewer"
publish = false
version = "0.0.0"
edition = "2021"
repository = "https://github.com/kayhhh/vrm-viewer"
license = "GPL-3.0-or-later"

[dependencies]
bevy = "0.13.0"
bevy_egui = "0.25.0"
bevy_panorbit_camera = { version = "0.16.1", features = ["bevy_egui"] }
bevy_vrm = "0.0.9"

[target.'cfg(target_family = "wasm")'.dependencies]
bevy_blob_loader = "0.0.4"
bevy_web_file_drop = "0.0.3"
wasm-bindgen = "=0.2.91"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[patch.crates-io]
bevy = { git = "https://github.com/eero-lehtinen/bevy", branch = "v0.13.1-nvidia-fix" }
